2020-11-03 Wiley E. Hill <wileyhill@gmail.com>

    * Remove references to generated data (by glib-mkenums) as the files are now
      static, add generic GPL License header.

          * include/gtksheet/gtksheettypebuiltins.h

2020-11-02 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Remove NULL validation and redundant conditional
      check of GTK_SHEET_DEBUG_DRAW_LABEL in _cell_draw_label.

    * src/gtksheet/gtksheetcolumn.c: Replace double asterisk Doxygen tags.

    * src/s_table.c: Replace realloc with GEDA_MEM_REALLOC macro.

    * src/x_gtksheet.c: Replace realloc with GEDA_MEM_REALLOC macro.

2020-10-30 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Revise function gtk_sheet_range_delete to
      check for NULL range.

2020-10-28 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Alphabetize widget_class assignments and
      remove validations in:

          * widget_class->button_press_event
          * widget_class->expose_event
          * widget_class->focus
          * widget_class->motion_notify_event
          * widget_class->size_allocate
          * widget_class->size_request
          * widget_class->unrealize

2020-10-27 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Add ancillary unsigned new_width in function
      gtk_sheet_button_release_handler.

2020-10-23 Wiley E. Hill <wileyhill@gmail.com>

    * include/gtksheet/gtksheetcolumn.h: Align argument columns.

    * src/gtksheet/gtksheet.c: Revise some debug outputs to utilize __func__
      macro. Reduce the scope of X and Y in gtk_sheet_button_release_handler
      use type unsigned integers for pointer cursor coordinates.

    * gtksheet/gtksheetcolumn.c: Use static cast in property handler; glib
      has already established the type of object and reformat switch case
      style. Reverse conditional logic in gtk_sheet_column_get_index and
      eliminate early return.
